--- a/plots_for_rs_jra_review_of_pt_2022.ipynb
+++ b/plots_for_rs_jra_review_of_pt_2022.ipynb
@@ -600,15 +600,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution 4: Keep the original marker colors and shapes, but individually shift each label enough to not overlap with other labels."
+    "## Solution 4: Keep the original marker colors and shapes, but individually shift each label enough to not overlap with other labels.\n",
+    "\n",
+    "I can definitely give this a try if it seems like the best option!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
